Cloned a new student repo

--- a/Challenge_Code.html
+++ b/Challenge_Code.html
@@ -649,6 +649,7 @@ tmap_save(lamu_map, filename = &quot;C:/Users/Cordio ea/Documents/Jane Daisy_Cha
 <pre><code>## Map saved to C:\Users\Cordio ea\Documents\Jane Daisy_Challenge\lamu_mangrove_map.png
 ## Resolution: 2437.456 by 1809.263 pixels
 ## Size: 8.124853 by 6.030878 inches (300 dpi)</code></pre>
+<pre class="r"><code>#</code></pre>
 </div>
 
 
